# newtonian_rustsody

./: .gitignore  Cargo.toml  README.md
oprofile_data/samples/previous/stats/: total_samples
oprofile_data/samples/previous/{root}/usr/lib/gvfs/gvfsd-fuse/{dep}/{root}/lib/x86_64-linux-gnu/ld-2.27.so/: cpu_clk_unhalted.100000.0.all.all.all
oprofile_data/samples/previous/{root}/usr/lib/gvfs/gvfsd-fuse/{dep}/{root}/lib/x86_64-linux-gnu/libc-2.27.so/: cpu_clk_unhalted.100000.0.all.all.all
oprofile_data/samples/previous/{root}/usr/lib/gvfs/gvfsd-fuse/{dep}/{root}/lib/x86_64-linux-gnu/libpthread-2.27.so/: cpu_clk_unhalted.100000.0.all.all.all
oprofile_data/samples/previous/{root}/usr/lib/gvfs/gvfsd-fuse/{dep}/{root}/proc/kallsyms/: cpu_clk_unhalted.100000.0.all.all.all
oprofile_data/samples/previous/{root}/usr/lib/gvfs/gvfsd-fuse/{dep}/{root}/usr/lib/x86_64-linux-gnu/libgio-2.0.so.0.5600.4/: cpu_clk_unhalted.100000.0.all.all.all
oprofile_data/samples/previous/{root}/usr/lib/gvfs/gvfsd/{dep}/{root}/lib/x86_64-linux-gnu/ld-2.27.so/: cpu_clk_unhalted.100000.0.all.all.all
oprofile_data/samples/previous/{root}/usr/lib/gvfs/gvfsd/{dep}/{root}/lib/x86_64-linux-gnu/libc-2.27.so/: cpu_clk_unhalted.100000.0.all.all.all
oprofile_data/samples/previous/{root}/usr/lib/gvfs/gvfsd/{dep}/{root}/lib/x86_64-linux-gnu/libpthread-2.27.so/: cpu_clk_unhalted.100000.0.all.all.all
oprofile_data/samples/previous/{root}/usr/lib/gvfs/gvfsd/{dep}/{root}/proc/kallsyms/: cpu_clk_unhalted.100000.0.all.all.all
src/: fractals.rs  input.rs  main.rs  tests.rs
(+6 files in other folders)
